[gd_scene load_steps=4 format=3 uid="uid://dvbmo0wc812wn"]

[ext_resource type="Texture2D" uid="uid://27glw8o6ie5u" path="res://textures/kenneyUI/PNG/panel_beige.png" id="1_4yob1"]
[ext_resource type="Theme" uid="uid://cfy7ykyxasjn4" path="res://theme/fab_ult_theme.tres" id="1_qq7yl"]
[ext_resource type="Script" path="res://AttributesBlock.gd" id="2_ietih"]

[node name="AttributesContainer" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_qq7yl")
script = ExtResource("2_ietih")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("1_4yob1")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="AttributesBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("1_qq7yl")

[node name="ContainerLabel" type="Label" parent="MarginContainer/AttributesBox"]
layout_mode = 2
text = "Attributes And Status Effects"
horizontal_alignment = 1

[node name="AttributeAlignment" type="HBoxContainer" parent="MarginContainer/AttributesBox"]
layout_mode = 2
theme_type_variation = &"FullSizeCheck"
metadata/_edit_group_ = true

[node name="AttributeNames" type="VBoxContainer" parent="MarginContainer/AttributesBox/AttributeAlignment"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="SpaceFillLabel" type="Label" parent="MarginContainer/AttributesBox/AttributeAlignment/AttributeNames"]
layout_mode = 2

[node name="DEXLabel" type="Label" parent="MarginContainer/AttributesBox/AttributeAlignment/AttributeNames"]
layout_mode = 2
size_flags_vertical = 3
text = "DEXTERITY"
horizontal_alignment = 2
vertical_alignment = 2

[node name="INSLabel" type="Label" parent="MarginContainer/AttributesBox/AttributeAlignment/AttributeNames"]
layout_mode = 2
size_flags_vertical = 3
text = "INSIGHT"
horizontal_alignment = 2
vertical_alignment = 2

[node name="MIGLabel" type="Label" parent="MarginContainer/AttributesBox/AttributeAlignment/AttributeNames"]
layout_mode = 2
size_flags_vertical = 3
text = "MIGHT"
horizontal_alignment = 2
vertical_alignment = 2

[node name="WILLabel" type="Label" parent="MarginContainer/AttributesBox/AttributeAlignment/AttributeNames"]
layout_mode = 2
size_flags_vertical = 3
text = "WILLPOWER"
horizontal_alignment = 2
vertical_alignment = 2

[node name="AttrBaseValues" type="VBoxContainer" parent="MarginContainer/AttributesBox/AttributeAlignment"]
layout_mode = 2
size_flags_vertical = 4

[node name="BaseLabel" type="Label" parent="MarginContainer/AttributesBox/AttributeAlignment/AttrBaseValues"]
layout_mode = 2
text = "Base
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BaseDEX" type="LineEdit" parent="MarginContainer/AttributesBox/AttributeAlignment/AttrBaseValues"]
layout_mode = 2

[node name="BaseINS" type="LineEdit" parent="MarginContainer/AttributesBox/AttributeAlignment/AttrBaseValues"]
layout_mode = 2

[node name="BaseMIG" type="LineEdit" parent="MarginContainer/AttributesBox/AttributeAlignment/AttrBaseValues"]
layout_mode = 2

[node name="BaseWIL" type="LineEdit" parent="MarginContainer/AttributesBox/AttributeAlignment/AttrBaseValues"]
layout_mode = 2

[node name="AttrTmpValues" type="VBoxContainer" parent="MarginContainer/AttributesBox/AttributeAlignment"]
layout_mode = 2

[node name="CurrentLabel" type="Label" parent="MarginContainer/AttributesBox/AttributeAlignment/AttrTmpValues"]
layout_mode = 2
text = "Current"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TmpDEX" type="LineEdit" parent="MarginContainer/AttributesBox/AttributeAlignment/AttrTmpValues"]
layout_mode = 2

[node name="TmpINS" type="LineEdit" parent="MarginContainer/AttributesBox/AttributeAlignment/AttrTmpValues"]
layout_mode = 2

[node name="TmpMIG" type="LineEdit" parent="MarginContainer/AttributesBox/AttributeAlignment/AttrTmpValues"]
layout_mode = 2

[node name="TmpWIL" type="LineEdit" parent="MarginContainer/AttributesBox/AttributeAlignment/AttrTmpValues"]
layout_mode = 2

[node name="StatusEffectsLight" type="VBoxContainer" parent="MarginContainer/AttributesBox/AttributeAlignment"]
layout_mode = 2

[node name="SpaceFillLabel" type="Label" parent="MarginContainer/AttributesBox/AttributeAlignment/StatusEffectsLight"]
layout_mode = 2
size_flags_vertical = 2

[node name="SlowChk" type="CheckBox" parent="MarginContainer/AttributesBox/AttributeAlignment/StatusEffectsLight"]
layout_mode = 2
size_flags_vertical = 2
text = "SLOW"

[node name="DazedChk" type="CheckBox" parent="MarginContainer/AttributesBox/AttributeAlignment/StatusEffectsLight"]
layout_mode = 2
size_flags_vertical = 2
text = "DAZED"

[node name="WeakChk" type="CheckBox" parent="MarginContainer/AttributesBox/AttributeAlignment/StatusEffectsLight"]
layout_mode = 2
size_flags_vertical = 2
text = "WEAK"

[node name="ShakenChk" type="CheckBox" parent="MarginContainer/AttributesBox/AttributeAlignment/StatusEffectsLight"]
layout_mode = 2
size_flags_vertical = 2
text = "SHAKEN"

[node name="StatusEffectsHeavy" type="VBoxContainer" parent="MarginContainer/AttributesBox/AttributeAlignment"]
layout_mode = 2
alignment = 2

[node name="SpaceFillLabel" type="Label" parent="MarginContainer/AttributesBox/AttributeAlignment/StatusEffectsHeavy"]
layout_mode = 2
size_flags_horizontal = 4

[node name="EnragedChk" type="CheckBox" parent="MarginContainer/AttributesBox/AttributeAlignment/StatusEffectsHeavy"]
layout_mode = 2
size_flags_vertical = 3
text = "ENRAGED"

[node name="PoisonedChk" type="CheckBox" parent="MarginContainer/AttributesBox/AttributeAlignment/StatusEffectsHeavy"]
layout_mode = 2
size_flags_vertical = 3
text = "POISONED"
